terms page white space fixed

--- a/Frontend/src/styles/Terms.css
+++ b/Frontend/src/styles/Terms.css
@@ -4,16 +4,18 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+  overflow-x: hidden;
 }
 
 .background-image {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   background-size: cover;
   background-position: center;
+  background-attachment: scroll;
   filter: brightness(0.75);
   z-index: -1;
 }
